# caonima

./: LICENSE  README.md  autorotate.py  caoniman.py  cnm-modemctl.service  envdump.py  fuck-phira.md  fuck-phira.py  fuck-pipewire-pulse.py  fuck-screen-keyboard.py  main.py  modemctl.py  pw-set.py  pyproject.toml  qmiset.py  spawn-me-first.py
template/: cnm.service
